--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,8 @@
 {
-  "extends": "next/core-web-vitals"
+  "plugins": ["@emotion"],
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "@emotion/pkg-renaming": "error"
+  }
+
 }
