--- a/package.json
+++ b/package.json
@@ -6,22 +6,33 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-types": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@apollo/client": "^3.6.2",
+    "@emotion/babel-preset-css-prop": "^11.2.0",
+    "@emotion/eslint-plugin": "^11.7.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@graphql-codegen/typescript-resolvers": "^2.6.4",
+    "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.7.0",
-    "graphql": "^16.5.0",
+    "apollo": "^2.33.11",
+    "graphql": "^14.0.0",
     "next": "^12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.9.2",
+    "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/typescript": "^2.4.11",
+    "@graphql-codegen/typescript-operations": "2.4.0",
+    "@graphql-codegen/typescript-react-apollo": "^3.2.14",
     "@types/node": "^17.0.31",
     "@types/react": "^18.0.9",
-    "eslint": "8.15.0",
+    "eslint": "^8.15.0",
     "eslint-config-next": "12.1.6",
     "typescript": "^4.6.4"
   }
