--- a/package.json
+++ b/package.json
@@ -19,17 +19,22 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.7.0",
     "apollo": "^2.33.11",
-    "graphql": "^14.0.0",
+    "cors": "^2.8.5",
+    "graphql": "14.3.1",
     "next": "^12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.9.2",
-    "@graphql-codegen/cli": "2.6.2",
-    "@graphql-codegen/typescript": "^2.4.11",
-    "@graphql-codegen/typescript-operations": "2.4.0",
-    "@graphql-codegen/typescript-react-apollo": "^3.2.14",
+    "@graphql-codegen/cli": "^2.2.0",
+    "@graphql-codegen/introspection": "^2.1.0",
+    "@graphql-codegen/schema-ast": "^2.2.0",
+    "@graphql-codegen/typescript": "^2.2.2",
+    "@graphql-codegen/typescript-graphql-request": "^4.1.4",
+    "@graphql-codegen/typescript-operations": "^2.1.4",
+    "@graphql-codegen/typescript-react-apollo": "^3.1.4",
+    "@graphql-codegen/typescript-resolvers": "^2.2.1",
     "@types/node": "^17.0.31",
     "@types/react": "^18.0.9",
     "eslint": "^8.15.0",
