--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "anime-collections",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://0.0.0.0:3000",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -19,11 +20,15 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.7.0",
     "apollo": "^2.33.11",
+    "apollo-boost": "^0.4.9",
     "cors": "^2.8.5",
-    "graphql": "14.3.1",
+    "graphql": "^14.3.1",
+    "http-proxy-middleware": "^2.0.6",
     "next": "^12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-apollo": "^3.1.5",
+    "react-dom": "18.1.0",
+    "react-loading-skeleton": "^3.1.0"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.9.2",
