--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "apollo": "^2.33.11",
     "apollo-boost": "^0.4.9",
     "cors": "^2.8.5",
+    "firebase": "^9.8.1",
     "graphql": "^14.3.1",
     "http-proxy-middleware": "^2.0.6",
     "next": "^12.1.6",
