--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
     "next": "^12.1.6",
     "react": "18.1.0",
     "react-apollo": "^3.1.5",
+    "react-collapsible": "^2.8.4",
     "react-dom": "18.1.0",
     "react-loading-skeleton": "^3.1.0",
     "react-player": "^2.10.1",
-    "recoil": "^0.7.3-alpha.2"
+    "recoil": "^0.7.3-alpha.2",
+    "sweetalert2": "^11.4.14",
+    "sweetalert2-react-content": "^5.0.0"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.9.2",
@@ -40,10 +43,8 @@
     "@graphql-codegen/introspection": "^2.1.0",
     "@graphql-codegen/schema-ast": "^2.2.0",
     "@graphql-codegen/typescript": "^2.2.2",
-    "@graphql-codegen/typescript-graphql-request": "^4.1.4",
     "@graphql-codegen/typescript-operations": "^2.1.4",
     "@graphql-codegen/typescript-react-apollo": "^3.1.4",
-    "@graphql-codegen/typescript-resolvers": "^2.2.1",
     "@types/node": "^17.0.31",
     "@types/react": "^18.0.9",
     "eslint": "^8.15.0",
